--- a/platforms/android/app/src/main/AndroidManifest.xml
+++ b/platforms/android/app/src/main/AndroidManifest.xml
@@ -9,30 +9,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.clevertap.android.sdk.FcmTokenListenerService">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-            </intent-filter>
-        </service>
         <service android:name="com.clevertap.android.sdk.pushnotification.fcm.FcmMessageListenerService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <meta-data android:name="CLEVERTAP_ACCOUNT_ID" android:value="TEST-RZ7-Z94-K95Z" />
+        <meta-data android:name="CLEVERTAP_TOKEN" android:value="TEST-4c1-a12" />
+        <meta-data android:name="CLEVERTAP_REGION" android:value=" " />
+        <meta-data android:name="GCM_SENDER_ID" android:value="1055953925629" />
+        <receiver android:enabled="true" android:exported="false" android:name="com.clevertap.android.sdk.pushnotification.CTPushNotificationReceiver" />
         <service android:exported="false" android:name="com.clevertap.android.sdk.pushnotification.CTNotificationIntentService">
             <intent-filter>
                 <action android:name="com.clevertap.PUSH_EVENT" />
             </intent-filter>
         </service>
-        <meta-data android:name="CLEVERTAP_ACCOUNT_ID" android:value="TEST-RZ7-Z94-K95Z" />
-        <meta-data android:name="CLEVERTAP_TOKEN" android:value="TEST-4c1-a12" />
-        <meta-data android:name="CLEVERTAP_REGION" android:value=" " />
-        <receiver android:exported="true" android:name="com.clevertap.android.sdk.InstallReferrerBroadcastReceiver">
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-            </intent-filter>
-        </receiver>
-        <receiver android:enabled="true" android:exported="false" android:name="com.clevertap.android.sdk.pushnotification.CTPushNotificationReceiver" />
     </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
