--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "devDependencies": {
     "clevertap-cordova": "git+https://github.com/CleverTap/clevertap-cordova.git",
     "cordova-android": "^9.0.0",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-firebase-analytics": "^5.0.0",
+    "cordova-plugin-firebase-messaging": "^5.0.1",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.1"
   },
   "cordova": {
     "plugins": {
@@ -25,6 +30,10 @@
         "CLEVERTAP_TOKEN": "TEST-4c1-a12",
         "CLEVERTAP_REGION": " ",
         "FIREBASE_MESSAGING_VERSION": "20.2.4"
+      },
+      "cordova-plugin-firebase-messaging": {
+        "ANDROID_FIREBASE_MESSAGING_VERSION": "21.0.+",
+        "ANDROIDX_CORE_VERSION": "1.3.+"
       }
     },
     "platforms": [
