--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -363,6 +363,10 @@ dependencies {
     implementation "androidx.viewpager:viewpager:1.0.0"
     implementation "com.google.android.material:material:1.2.1"
     implementation "com.android.installreferrer:installreferrer:2.1"
+    implementation "com.google.firebase:firebase-analytics:18.0.+"
+    implementation "com.google.firebase:firebase-messaging:21.0.+"
+    implementation "androidx.core:core:1.3.+"
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
     // SUB-PROJECT DEPENDENCIES END
 }
 
