--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -21,3 +21,7 @@ cordova.system.library.7=androidx.recyclerview:recyclerview:1.1.0
 cordova.system.library.8=androidx.viewpager:viewpager:1.0.0
 cordova.system.library.9=com.google.android.material:material:1.2.1
 cordova.system.library.10=com.android.installreferrer:installreferrer:2.1
+cordova.system.library.11=com.google.firebase:firebase-analytics:18.0.+
+cordova.system.library.12=com.google.firebase:firebase-messaging:21.0.+
+cordova.system.library.13=androidx.core:core:1.3.+
+cordova.system.library.14=me.leolin:ShortcutBadger:1.1.22@aar
